# cmake_magisterka

./: CMakeLists.txt  mag.txt
boost__example/test/: main.cpp
boost_assert_levels/test/: main.cpp
boost_check_levels/test/: main.cpp
boost_checkpoint/test/: main.cpp
boost_custom_predicate_support/: CMakeLists.txt
boost_custom_predicate_support/src/: PrintingComponent.cpp  main.cpp
boost_custom_predicate_support/test/: main.cpp
boost_dont_print_specific_value/test/: main.cpp
boost_global_fixture/test/: main.cpp
boost_master_test_suite_name/test/: main.cpp
boost_master_test_suite_name_from_macro/test/: main.cpp
boost_output_test_stream/src/: PrintingComponent.cpp  PrintingComponent.h
boost_output_test_stream/test/: main.cpp
boost_param_test_case/test/: main.cpp
boost_per_suite_fixture/test/: main.cpp
boost_per_test_fixture/test/: main.cpp
boost_progress_monitor/test/: main.cpp
boost_running_specific_tests/src/: main.cpp
boost_running_specific_tests/test/: main.cpp
boost_template_test_case/test/: main.cpp
boost_template_test_case_manually_registered/test/: main.cpp
boost_template_test_case_with_automatic_registration/test/: main.cpp
boost_test_case_expected_failures/test/: main.cpp
boost_test_case_manually_registered_expected_failures/test/: main.cpp
boost_test_message/test/: main.cpp
boost_test_suite_manually_registered/: CMakeLists.txt
boost_test_suite_manually_registered/test/: main.cpp
boost_test_suite_with_automatic_registration/test/: main.cpp
boost_xml_output/test/: main.cpp
gtest__example/: CMakeLists.txt
gtest__example/test/: main.cpp
gtest_assert_levels/test/: main.cpp
gtest_custom_output_on_assert_failure/test/: main.cpp
gtest_custom_predicate_support/test/: main.cpp
gtest_death_tests/test/: main.cpp
gtest_fixture/test/: main.cpp
gtest_global_fixture/src/: simple_calc.cpp  simple_calc.h
gtest_global_fixture/test/: main.cpp
gtest_logging_additional_information/test/: main.cpp
gtest_private_code/src/: simple_calc.cpp  simple_calc.h
gtest_private_code/test/: main.cpp
gtest_scoped_trace_tests/test/: main.cpp
gtest_subroutine_asserts/test/: main.cpp
gtest_subroutine_check_for_failures/test/: main.cpp
gtest_test_case/test/: main.cpp
gtest_type_assertions/src/: simple_calc.cpp  simple_calc.h
gtest_type_assertions/test/: main.cpp
gtest_typed_tests/test/: main.cpp
gtest_typed_tests2/test/: main.cpp
gtest_value_parameterized_tests/test/: main.cpp
lib/: boost_unit_test_framework-vc140-mt-1_60.lib  boost_unit_test_framework-vc140-mt-gd-1_60.lib  gmock_main.lib  gtest.lib  gtest_main.lib
project1/: CMakeLists.txt
project1/test/: main.cpp
project2/: CMakeLists.txt
project2/test/: main.cpp
tex/: mag.tex
