cmake_minimum_required(VERSION 2.6)
project (rootproject)

set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/bin)
 
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})
 
set(PROJECT_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
 
include_directories("${PROJECT_INCLUDE_DIR}")
include_directories("${PROJECT_SOURCE_DIR}")
 
add_subdirectory(boost__example)
add_subdirectory(boost_param_test_case)
add_subdirectory(boost_template_test_case_manually_registered)
add_subdirectory(boost_template_test_case_with_automatic_registration)
add_subdirectory(boost_test_suite_manually_registered)
add_subdirectory(boost_test_suite_with_automatic_registration)
add_subdirectory(boost_master_test_suite_name_from_macro)
add_subdirectory(boost_master_test_suite_name)
add_subdirectory(boost_test_case_manually_registered_expected_failures)
add_subdirectory(boost_test_case_expected_failures)
add_subdirectory(boost_per_test_fixture)
add_subdirectory(boost_per_suite_fixture)
add_subdirectory(boost_global_fixture)
add_subdirectory(boost_test_message)
add_subdirectory(boost_dont_print_specific_value)
add_subdirectory(boost_checkpoint)
add_subdirectory(boost_xml_output)
add_subdirectory(boost_progress_monitor)
add_subdirectory(boost_running_specific_tests)
add_subdirectory(boost_assert_levels)
add_subdirectory(boost_output_test_stream)
add_subdirectory(boost_custom_predicate_support)
add_subdirectory(gtest__example)
add_subdirectory(gtest_assert_levels)
add_subdirectory(gtest_test_case)
add_subdirectory(gtest_fixture)
add_subdirectory(gtest_custom_predicate_support)
add_subdirectory(gtest_type_assertions)
add_subdirectory(gtest_custom_output_on_assert_failure)
add_subdirectory(gtest_death_tests)
add_subdirectory(gtest_scoped_trace_tests)
add_subdirectory(gtest_subroutine_asserts)
add_subdirectory(gtest_subroutine_check_for_failures)
add_subdirectory(gtest_logging_additional_information)
add_subdirectory(gtest_global_fixture)
add_subdirectory(gtest_value_parameterized_tests)
add_subdirectory(gtest_typed_tests)
add_subdirectory(gtest_typed_tests2)
add_subdirectory(gtest_private_code)

file(COPY "${CMAKE_SOURCE_DIR}/lib/boost_unit_test_framework-vc140-mt-gd-1_60.dll" DESTINATION "${CMAKE_SOURCE_DIR}/bin/Debug")
file(COPY "${CMAKE_SOURCE_DIR}/lib/gtest.dll" DESTINATION "${CMAKE_SOURCE_DIR}/bin/Debug")